--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,12 @@
 
 .Action {
   height: 70px;
-  width: 250px;  
   padding: 0;
   display: block;
   margin: 0 auto;
   max-width: 100%;
+  max-height: 100%;
+  align-items: left;
 }
 
 .App-header {
@@ -27,16 +28,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
-.Marble {
-  font-size: 5vmin;
-  justify-content: center;
-  padding: 0;
-  display: block;
-  margin: 0 auto;
-  max-height: 100%;
-  max-width: 100%;
 }
 
 .column {
